--- a/005.html
+++ b/005.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">辽宁省</span>:盘锦华发学校--G102--盘锦北收费站--G1京哈高速--辽冀界；<br><hr><span id="pro">河北省</span>:冀辽界--G1京哈高速--G0121京秦高速--S52承秦高速--承德县收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">辽宁省</span>:朱家村--G102--甜水收费站--G4513奈营高速--G1京哈高速--辽冀界；<br><hr><span id="pro">河北省</span>:冀辽界--G1京哈高速--G0121京秦高速--S52承秦高速--承德县收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
