--- a/002.html
+++ b/002.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">河北省</span>:南和县隆顺玻璃制品厂--G515--南和收费站--G2516东吕高速--G45大广高速--冀豫界；<br><hr><span id="pro">河南省</span>:豫冀界--G45大广高速--南乐收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">河北省</span>:南和县隆顺玻璃制品厂--G515--南石路--南和收费站--G2516东吕高速--G45大广高速--冀豫界；<br><hr><span id="pro">河南省</span>:豫冀界--G45大广高速--南乐收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台伟驰货物运输有限公司</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
