--- a/002.html
+++ b/002.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">贵州省</span>:狗场坝村--X930--平定营收费站--S35安福高速--S35道新高速--S30江黔高速--G56杭瑞高速--黔湘界；<br><hr>
+<span id="pro">贵州省</span>:平定营收费站--S35安福高速--S35道新高速--S30江黔高速--G56杭瑞高速--黔湘界；<br><hr>
 <span id="pro">湖南省</span>:湘黔界--G56杭瑞高速--G55二广高速--湘鄂界；<br><hr>
 <span id="pro">湖北省</span>:鄂湘界--G55二广高速--G50沪渝高速--S15汉蔡高速--G4京港澳高速--G42沪蓉高速--鄂皖界；<br><hr>
 <span id="pro">安徽省</span>:皖鄂界--G42沪蓉高速--G40沪陕高速--G105--G35济广高速--马店收费站<br><hr></div></li>
@@ -114,7 +114,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车整备质量：</div>
                     <div class="detail-value" id="vehWeight">8.805吨</div></li>                
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车车号牌：</div>
-                    <div class="detail-value" id="hanvehicleNo">鲁H254G挂</div></li>
+                    <div class="detail-value" id="hanvehicleNo">鲁HZ54G挂</div></li>
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车厂牌型号：</div>
                     <div class="detail-value" id="hanmodel">LWY9402TDP</div></li>
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车整备质量：</div>
