--- a/004.html
+++ b/004.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:南兴宇辰建材--G207--S373--沈塘收费站--S50东雷高速--G15深海高速--东坡岭立交--G75兰海高速--粤桂界；<br><hr><span id="pro">广西壮族自治区</span>:桂粤界--G75兰海高速--闸口收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:南兴宇辰建材--G207--S373--沈塘收费站--S50东雷高速--G15沈海高速--东坡岭立交--G75兰海高速--粤桂界；<br><hr><span id="pro">广西壮族自治区</span>:桂粤界--G75兰海高速--闸口收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台伟驰货物运输有限公司</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
