--- a/005.html
+++ b/005.html
@@ -77,7 +77,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
                     <div class="detail-value " id="reqNo">A4400002024041023418</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">吉林省，辽宁省，河北省，天津市，北京市</div></li>
+				<div class="detail-value " id="passDists">吉林省，辽宁省，河北省，天津市，北京市，河北省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
                     <div class="detail-value " id="passDate">2024年04月11日18时35分至 2024年04月18日 23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
