--- a/019.html
+++ b/019.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">河北省</span>:正新轮胎--G107--东马庄收费站--G2516东吕高速--G4京港澳高速--S072邢衡高速--G45大广高速--G1811黄石高速--G3京台高速--G2京沪高速--S6津沧高速--冀津界；<br><hr>
+<span id="pro">河北省</span>:金垄麦农场--G340--羊范收费站--G2516东吕高速--G4京港澳高速--S072邢衡高速--G45大广高速--G1811黄石高速--G3京台高速--G2京沪高速--S6津沧高速--冀津界；<br><hr>
 <span id="pro">天津市</span>:津冀界--S6津沧高速--G0211津石高速--G18荣乌高速--郭庄子收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
