--- a/002.html
+++ b/002.html
@@ -75,17 +75,17 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4400002024051053397</div></li>
+                    <div class="detail-value " id="reqNo">A1400002024051037336</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">山西省,河北省</div></li>
+				<div class="detail-value " id="passDists">山西省,陕西省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年05月11日15时15分至 2024年05月31日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年05月11日17时55分至 2024年05月31日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">山西省</span>: 晓飞汽修--和平西街--忻州收费站--G55二广高速--G1812沧榆高速--晋冀界；<br><hr>
-<span id="pro">河北省</span>: 冀晋界--G1812沧榆高速--阜平西收费站--G207--河北辰驰新型材料有限公司 <br><hr>
+<span id="pro">山西省</span>: 忻府区合索镇--G337--G208--G108--高蒲收费站--G55二广高速--G1812沧榆高速--晋陕界；<br><hr>
+<span id="pro">陕西省</span>: 陕晋界--G1812沧榆高速--大保当收费站--G337--兖州煤业榆林能化有限公司 <br><hr>
 </div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
@@ -99,7 +99,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">挖机</div></li>
+                    <div class="detail-value " id="cargoInfo">挖掘机一台</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">43.44吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -136,7 +136,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
 山西省：<br>交通部门意见:同意通行! <br>公安部门意见:暂无！<br><hr>
-河北省：<br>交通部门意见:同意通行! <br>公安部门意见:暂无！<br><hr>
+陕西省：<br>交通部门意见:同意通行! <br>公安部门意见:暂无！<br><hr>
 </div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
