--- a/004.html
+++ b/004.html
@@ -84,8 +84,8 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广东省</span>:金丰城大厦--G324--S240--霞湖收费站--G15沈海高速--粤闽界；<br><hr>
-<span id="pro">福建省</span>:闽粤界--G15沈海高速--诏安东收费站--G228--黎明村<br><hr></div></li>
+<span id="pro">广东省</span>:金丰城大厦--G228--G236--海丰收费站--G1523甬莞高速--粤闽界；<br><hr>
+<span id="pro">福建省</span>:闽粤界--G1523甬莞高速--诏安霞葛收费站--S309--黎明村<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">刘杰昆</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
