--- a/010.html
+++ b/010.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">江西省</span>:盛泰汽修厂---G105---龙南东收费站---G45大广高速---赣鄂界；<br><hr>
+<span id="pro">江西省</span>:盛泰汽修厂---G535---定南收费站---G4511龙河高速---G45大广高速---赣鄂界；<br><hr>
 <span id="pro">湖北省</span>:鄂赣界---G45大广高速---大冶收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
